@@ -10,8 +10,10 @@
 #include <stdio.h>
 #include <stdlib.h>
 
-int main(int argc, char** argv) {
-  if (argc == 2)
-    printf("%x", atoi(argv[1]));
-  return 0;
+int main(int argc, char** argv)
+{
+    if (argc == 2)
+        printf("%x", atoi(argv[1]));
+
+    return 0;
 }
